<resources>
    <string name="app_name">Numerus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="frequency_analysis">Frequency Analysis</string>
    <string name="caesar_cipher">Caesar Cipher</string>
    <string name="rot_13_cipher">Rot-13 Cipher</string>
    <string name="vigenere_cipher">Vigenère Cipher</string>
    <string name="extra">Extra</string>
    <string name="themes">Themes</string>
    <string name="share_with_friends">Share With Friends!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="blank"> </string>
    <string name="ciphers">Ciphers</string>
    <string name="learn">Learn</string>
    <string name="title_activity_themes">Themes</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_caesar_cipher">CaesarCipherActivity</string>
    <string name="columnar_transposition">Columnar Transposition</string>
    <string name="binary">Binary</string>
    <string name="title_activity_binary">BinaryActivity</string>
    <string name="title_activity_vigenere">VigenereActivity</string>
    <string name="title_activity_column_trans">ColumnTransActivity</string>
    <string name="binary_encoder">Binary Encoder</string>
    <string name="clear">Clear</string>
    <string name="text_to_binary">Text to Binary</string>
    <string name="binary_to_text">Binary to Text</string>
    <string name="encode">Encode</string>
    <string name="decode">Decode</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="encoded_message_will_appear_here">Encoded message will appear here</string>
    <string
        name="title_activity_splash_screen">
        SplashScreenActivity
    </string>


    <!--Invite Strings-->
    <string name="action_deep_link">
        com.google.android.gms.samples.appinvite.DEEP_LINK_ACTION
    </string>
    <string name="invite">Send invitations!</string>
    <string name="welcome">Invites</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>

    <!-- TODO: Change invitation_custom_image for email link -->
    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message">This app is great! We can send encoded messages!</string>
    <string name="invitation_deep_link">https://google-mac.github.io/Numerus/</string>
    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Install!</string>

    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>

    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>

    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="website_reference">google-mac.github.io/Numerus</string>

</resources>
