<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/binary_encoder"
        android:id="@+id/textView_binary"
        android:layout_gravity="center_horizontal"
        android:textSize="32sp"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/editText_binary"
        android:layout_gravity="center_vertical"
        android:hint="@string/enter_message_here"
        android:layout_weight="33"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:singleLine="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:layout_weight="33">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2_binary"
            android:focusable="true"
            android:textIsSelectable="true"
            android:hint="@string/encoded_message_will_appear_here"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:padding="12dp" />

        <ImageButton
            android:id="@+id/send_button_binary"
            android:src="@drawable/ic_menu_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"/>

    </LinearLayout>

    <Button
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/button_binary"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:layout_weight="33">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup_binary"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_to_binary"
                android:id="@+id/radioButton_binary"
                android:checked="true"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binary_to_text"
                android:id="@+id/radioButton2_binary"
                android:checked="false"
                android:textSize="18sp" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>
